[#798] Cyclic dependencies: Refactor the test location.